--- a/Conways-Game-of-Life/Conways-Game-of-Life.vcxproj.filters
+++ b/Conways-Game-of-Life/Conways-Game-of-Life.vcxproj.filters
@@ -44,6 +44,12 @@
     <ClInclude Include="resource.h">
       <Filter>Util</Filter>
     </ClInclude>
+    <ClInclude Include="global.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="resource1.h">
+      <Filter>Util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Conways-Game-of-Life.rc">
